feat: develop author portfolio page[20]

--- a/views/author.ejs
+++ b/views/author.ejs
@@ -162,6 +162,7 @@
           <div class="marginer"></div>
           <div class="left_5">
             <h5>Extra Skills</h5>
+            <!-- Dinamically rendering -->
 
             <% user.extra_skills.forEach(skill => { %>
             <div class="extra-container">
