fix: tooltips and hover effects applied for right sidebar

--- a/public/main.css
+++ b/public/main.css
@@ -317,3 +317,63 @@ p {
 h5 {
   margin-bottom: 20px;
 }
+
+.button {
+  /* Background */
+  background: rgb(240, 240, 246);
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  vertical-align: center;
+  border-radius: 50%;
+}
+
+.tooltip:hover {
+  /* Yellow */
+  background: rgb(255, 180, 0);
+}
+
+.tooltip {
+  /* Background */
+  background: rgb(240, 240, 246);
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  vertical-align: center;
+  border-radius: 50%;
+  position: relative;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 150%;
+  left: 50%;
+  margin-left: -60px;
+}
+
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: black transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
