--- a/views/author.ejs
+++ b/views/author.ejs
@@ -34,27 +34,27 @@
               </a>
               <a class="link_href" href="">
                 <div class="icon">
-                  <img src="icon/Facebook.jpeg" alt="" />
+                  <img src="icon/instagram.jpeg" alt="" />
                 </div>
               </a>
               <a class="link_href" href="">
                 <div class="icon">
-                  <img src="icon/Facebook.jpeg" alt="" />
+                  <img src="icon/twitter.jpeg" alt="" />
                 </div>
               </a>
               <a class="link_href" href="">
                 <div class="icon">
-                  <img src="icon/Facebook.jpeg" alt="" />
+                  <img src="icon/linkeding.jpeg" alt="" />
                 </div>
               </a>
               <a class="link_href" href="">
                 <div class="icon">
-                  <img src="icon/Facebook.jpeg" alt="" />
+                  <img src="icon/youtube.jpeg" alt="" />
                 </div>
               </a>
               <a class="link_href" href="">
                 <div class="icon">
-                  <img src="icon/Facebook.jpeg" alt="" />
+                  <img src="icon/dribbble.jpeg" alt="" />
                 </div>
               </a>
             </div>
@@ -233,12 +233,13 @@
         <div class="right_frame">
           <img src="menu_icon/contrast.svg" alt="" />
           <div class="right-icons">
-            <img class="home-icon" src="menu_icon/home.svg" alt="" />
-            <img class="right-icon" src="menu_icon/Blog.svg" alt="" />
-            <img class="right-icon" src="menu_icon/Contact.svg" alt="" />
-            <img class="right-icon" src="menu_icon/Cv.svg" alt="" />
-            <img class="right-icon" src="menu_icon/Portfolio.svg" alt="" />
-            <img class="right-icon" src="menu_icon/Cv.svg" alt="" />
+            <div class="tooltip"><img  src="menu_icon/home.svg" alt="" /><span class="tooltiptext">Home</span></div>
+            <div class="tooltip"><img  src="menu_icon/blog.svg" alt="" /><span class="tooltiptext">Blog</span></div>
+            <div class="tooltip"><img  src="menu_icon/contact.svg" alt="" /><span class="tooltiptext">Contact</span></div>
+            <div class="tooltip"><img  src="menu_icon/cv.svg" alt="" /><span class="tooltiptext">CV</span></div>
+            <div class="tooltip"><img  src="menu_icon/Portfolio.svg" alt="" /><span class="tooltiptext">Portfolio</span></div>
+            <div class="tooltip"><img  src="menu_icon/services.svg" alt="" /><span class="tooltiptext">Services</span></div>
+
           </div>
         </div>
       </div>
