--- a/views/author.ejs
+++ b/views/author.ejs
@@ -226,6 +226,7 @@
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae
                   nulla diam in ac dictum a urna
                 </p>
+                <a href="/"><p style="color: orange;">ORDER NOW ></p></a>
               </div>
             </div>
           </div>
