--- a/views/author.ejs
+++ b/views/author.ejs
@@ -27,36 +27,13 @@
             <div class="left_1-2"><%=user.name%></div>
             <div class="left_1-3"><%=user.profession%></div>
             <div class="left_icons">
+              <% for(i=0; i<6; i++) { %>
               <a class="link_href" href="">
                 <div class="icon">
-                  <img src="icon/Facebook.jpeg" alt="" />
+                  <img src="icon/icon<%= i %>.jpeg" alt="" />
                 </div>
               </a>
-              <a class="link_href" href="">
-                <div class="icon">
-                  <img src="icon/instagram.jpeg" alt="" />
-                </div>
-              </a>
-              <a class="link_href" href="">
-                <div class="icon">
-                  <img src="icon/twitter.jpeg" alt="" />
-                </div>
-              </a>
-              <a class="link_href" href="">
-                <div class="icon">
-                  <img src="icon/linkeding.jpeg" alt="" />
-                </div>
-              </a>
-              <a class="link_href" href="">
-                <div class="icon">
-                  <img src="icon/youtube.jpeg" alt="" />
-                </div>
-              </a>
-              <a class="link_href" href="">
-                <div class="icon">
-                  <img src="icon/dribbble.jpeg" alt="" />
-                </div>
-              </a>
+              <% } %>
             </div>
           </div>
           <div class="marginer"></div>
@@ -75,7 +52,7 @@
             </div>
             <div class="key-val-container">
               <span class="text-keys">Address:</span>
-              <span class="text-value"><%= user.address %></span>
+              <span class="text-value"><%= user.adress%></span>
             </div>
           </div>
           <div class="marginer"></div>
@@ -112,52 +89,17 @@
           <div class="marginer"></div>
           <div class="left_4">
             <h5>Skills</h5>
-
+            <% user.skills.forEach(skill => { %>
             <div class="progress">
               <div class="key-val-container">
-                <span><%=user.skills[0]%></span>
-                <span>100%</span>
+                <span><%=skill.title%></span>
+                <span><%= skill.prog %>%</span>
               </div>
               <div>
-                <img src="progress/Line.svg" alt="" />
+                <img src="progress/l<%= skill.prog %>.svg" alt="" />
               </div>
             </div>
-            <div class="progress">
-              <div class="key-val-container">
-                <span><%=user.skills[1]%></span>
-                <span>100%</span>
-              </div>
-              <div>
-                <img src="progress/Line.svg" alt="" />
-              </div>
-            </div>
-            <div class="progress">
-              <div class="key-val-container">
-                <span><%=user.skills[2]%></span>
-                <span>75%</span>
-              </div>
-              <div>
-                <img src="progress/l75.svg" alt="" />
-              </div>
-            </div>
-            <div class="progress">
-              <div class="key-val-container">
-                <span><%=user.skills[3]%></span>
-                <span>80%</span>
-              </div>
-              <div>
-                <img src="progress/l80.svg" alt="" />
-              </div>
-            </div>
-            <div class="progress">
-              <div class="key-val-container">
-                <span><%=user.skills[4]%></span>
-                <span>75%</span>
-              </div>
-              <div>
-                <img src="progress/l75.svg" alt="" />
-              </div>
-            </div>
+            <% }) %>
           </div>
           <div class="marginer"></div>
           <div class="left_5">
@@ -175,12 +117,13 @@
         </div>
         <div class="midd_frame">
           <div id="midd_frame">
-            <img src="btn_icon/Polygon1.svg" alt="" class="springkle1" />
-            <img src="btn_icon/Ellipse 15.svg" alt="" class="springkle2" />
-            <img src="btn_icon/Ellipse 16.svg" alt="" class="springkle3" />
-            <img src="btn_icon/Ellipse 12.svg" alt="" class="springkle5" />
-            <img src="btn_icon/Rectangle 52.svg" alt="" class="springkle4" />
-            <img src="btn_icon/Rectangle 52.svg" alt="" class="springkle6" />
+            <% for(i=0; i<6; i++) { %>
+            <img
+              src="btn_icon/det<%= i %>.svg"
+              alt=""
+              class="springkle<%= i+1%>"
+            />
+            <% } %>
 
             <div class="wrapper">
               <h1><%= user.profession %> in <%=user.work_place%></h1>
@@ -195,38 +138,21 @@
             <h1>My Services</h1>
             <p><%=user.service_desc%></p>
             <div class="myservice-container">
+              <% user.services.forEach(serv => { %>
               <div class="myservice">
-                <img src="box_images/coding.svg" alt="" />
-                <h5>Web development</h5>
-                <p>Blog, E-commerce</p>
+                <img src="box_images/<%= serv.icon %>.svg" alt="" />
+                <h5><%= serv.title %></h5>
+                <p><%= serv.desc %></p>
               </div>
-              <div class="myservice">
-                <img src="box_images/illustration.svg" alt="" />
-                <h5>UI/UX Design</h5>
-                <p>Mobile app, website design</p>
-              </div>
-              <div class="myservice">
-                <img src="box_images/microphone.svg" alt="" />
-                <h5>Sound Design</h5>
-                <p>Voice Over, Beat Making</p>
-              </div>
-              <div class="myservice">
-                <img src="box_images/game-development.svg" alt="" />
-                <h5>Game Design</h5>
-                <p>Character Design, Props & Objects</p>
-              </div>
-              <div class="myservice">
-                <img src="box_images/photographer.svg" alt="" />
-                <h5>photography</h5>
-                <p>portrait, product photography</p>
-              </div>
+              <% }) %>
+
               <div class="myservice">
                 <h5>Advertising</h5>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae
                   nulla diam in ac dictum a urna
                 </p>
-                <a href="/"><p style="color: orange;">ORDER NOW ></p></a>
+                <a href="/"><p style="color: orange">ORDER NOW ></p></a>
               </div>
             </div>
           </div>
@@ -234,13 +160,14 @@
         <div class="right_frame">
           <img src="menu_icon/contrast.svg" alt="" />
           <div class="right-icons">
-            <div class="tooltip"><img  src="menu_icon/home.svg" alt="" /><span class="tooltiptext">Home</span></div>
-            <div class="tooltip"><img  src="menu_icon/blog.svg" alt="" /><span class="tooltiptext">Blog</span></div>
-            <div class="tooltip"><img  src="menu_icon/contact.svg" alt="" /><span class="tooltiptext">Contact</span></div>
-            <div class="tooltip"><img  src="menu_icon/cv.svg" alt="" /><span class="tooltiptext">CV</span></div>
-            <div class="tooltip"><img  src="menu_icon/Portfolio.svg" alt="" /><span class="tooltiptext">Portfolio</span></div>
-            <div class="tooltip"><img  src="menu_icon/services.svg" alt="" /><span class="tooltiptext">Services</span></div>
-
+            <% user.icons.forEach(icon => { %>
+            <div class="tooltip">
+              <img src="menu_icon/<%= icon %>.svg" alt="" /><span
+                class="tooltiptext"
+                ><%= icon %></span
+              >
+            </div>
+            <% }) %>
           </div>
         </div>
       </div>
