--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -28,11 +28,14 @@
               class="form-control mr-3"
             />
             <button class="btn btn-primary" style="border-radius: 20px">
-              Yangi Harid
+              Yangi Reja Qoshish
             </button>
           </div>
         </form>
       </div>
+      <button id="clear-all" class="btn btn-danger" style="border-radius: 20px">
+        Hamma Rejalarni Ochirish
+      </button>
     </div>
   </body>
 </html>
