--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -20,7 +20,7 @@
           <div class="d-flex align-items-center">
             <input
               type="text"
-              name="item"
+              name="reja"
               autofocus
               autocomplete="off"
               style="flex: 1"
