--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -40,10 +40,18 @@
         >
           <span class="item-text"><%= item.reja%></span>
           <div>
-            <button data-id="<%=item._id%>" class="edit-me btn btn-secondary btn-sm mr-1">
+            <button
+              data-id="<%=item._id%>"
+              class="edit-me btn btn-secondary btn-sm mr-1"
+            >
               O`zgartirish
             </button>
-            <button data-id="<%=item._id%>" class="delete-me btn btn-danger btn-sm">Ochirish</button>
+            <button
+              data-id="<%=item._id%>"
+              class="delete-me btn btn-danger btn-sm"
+            >
+              Ochirish
+            </button>
           </div>
         </li>
 
@@ -53,5 +61,7 @@
         Hamma Rejalarni Ochirish
       </button>
     </div>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="/browser.js"></script>
   </body>
 </html>
